dev/06-data-sources/manufacturing-data-publisher/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-sources
  labels:
    name: data-sources
    environment: dev
