dev/06-data-sources/manufacturing-data-publisher/build-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-builder
  namespace: default
spec:
  restartPolicy: Never
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - "--context=/workspace"
    - "--dockerfile=/workspace/Dockerfile"
    - "--destination=manufacturing-data-publisher:latest"
    - "--no-push"
    - "--tarPath=/workspace/image.tar"
    volumeMounts:
    - name: workspace
      mountPath: /workspace
  volumes:
  - name: workspace
    hostPath:
      path: /home/flexadmin/kubernetes/dev/06-data-sources/manufacturing-data-publisher
      type: Directory
